chore: data extraction reinforcement